Update Brave bubbling under, add sections for CNAME cloaking

--- a/brave/index.html
+++ b/brave/index.html
@@ -825,6 +825,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
     <li><a href="#first-party-cookies">First-party cookies</a></li>
     <li><a href="#other-third-party-storage">Other third-party storage</a></li>
     <li><a href="#other-first-party-storage">Other first-party storage</a></li>
+    <li><a href="#cname-cloaking">CNAME cloaking</a></li>
     <li><a href="#referrer">Referrer</a></li>
     <li><a href="#other">Other</a></li>
   </ul>
@@ -943,6 +944,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices info" ><p>Note that since Brave <em>blocks</em> resources found in their <a href="#classification-of-known-trackers">classification lists</a>, it has the downstream effect of blocking storage access from these vendors who now can&rsquo;t execute their JavaScript in the user&rsquo;s browser, or respond to the blocked HTTP requests.</p>
 </div>
 
+<h2 id="cname-cloaking">CNAME cloaking</h2>
+<p>No protections against CNAME cloaking.</p>
 <h2 id="referrer">Referrer</h2>
 <p>Cross-site referrers are <strong>spoofed</strong> in non-navigational HTTP requests.</p>
 
