--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser&rsquo;s own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 27 September 2020<br>
-Updated Firefox and Edge Referrer policy.</p>
+<p><strong>Last updated</strong>: 1 November 2020<br>
+Updated list of query parameters that Brave automatically strips.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -920,7 +920,7 @@ Updated Firefox and Edge Referrer policy.</p>
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
-<td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Randomize HTML canvas fingerprints by first-party domain.</span></p></td>
+<td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>, and others) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Randomize HTML canvas fingerprints by first-party domain.</span></p></td>
 <td>n/a</td>
 <td>n/a</td>
 <td><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</td>
