--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser&rsquo;s own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 12 November 2020<br>
-Updated Safari with CNAME cloaking mitigation in Big Sur.</p>
+<p><strong>Last updated</strong>: 2 December 2020<br>
+Updated Brave with details about CNAME ad blocking in 1.17.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -902,7 +902,7 @@ Updated Safari with CNAME cloaking mitigation in Big Sur.</p>
 </tr>
 <tr>
 <td align="right"><strong>CNAME cloaking</strong></td>
-<td><a href="/brave/#cname-cloaking" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
+<td><a href="/brave/#cname-cloaking" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Brave blocks any network requests where either the requested URL or that URL&rsquo;s CNAME record matches any rules in Brave&rsquo;s blocklists.</span></td>
 <td><a href="/chrome/#cname-cloaking" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/edge/#cname-cloaking" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/firefox/#cname-cloaking" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
@@ -920,7 +920,7 @@ Updated Safari with CNAME cloaking mitigation in Big Sur.</p>
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
-<td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>, and others) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Randomize HTML canvas fingerprints by first-party domain.</span></p></td>
+<td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>, and others) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Randomize HTML canvas fingerprints by first-party domain.</p></td>
 <td>n/a</td>
 <td>n/a</td>
 <td><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</td>
@@ -933,9 +933,8 @@ Updated Safari with CNAME cloaking mitigation in Big Sur.</p>
 </div>
 
 <h3 id="bubbling-under">Bubbling under</h3>
-<p><strong>Last updated</strong>: 12 November 2020</p>
+<p><strong>Last updated</strong>: 2 December 2020</p>
 <ul>
-<li>Brave: Block requests to domains that have a CNAME redirect to a known tracker (<a href="https://brave.com/privacy-updates-6/">link to blog post</a>).</li>
 <li>Brave: Add noise to Canvas, WebGL and AudioContext APIs to make fingerprinting more difficult (<a href="https://github.com/brave/brave-browser/wiki/Fingerprinting-Protections">link to wiki page</a>).</li>
 <li>Brave: Cap all script-writable storage to a maximum lifetime (<a href="https://github.com/brave/brave-browser/issues/4438">link to issue</a>).</li>
 <li>Chrome: Deprecation of the User-Agent string (<a href="https://groups.google.com/a/chromium.org/forum/m/#!msg/blink-dev/-2JIRNMWJ7s/yHe4tQNLCgAJ">link to discussion</a>).</li>
