--- a/safari/index.html
+++ b/safari/index.html
@@ -915,7 +915,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p><strong>Example</strong>: A website loads an iframe from <code>www.iframe-domain.com</code>. This is the first time the user&rsquo;s browser has loaded content from this domain in a frame. ITP does not yet react to this, as it&rsquo;s a single occurrence. Later, the user visits multiple different websites, all loading data from the same domain into an iframe. At this point, ITP classifies the domain as having cross-site capabilities, and the restrictions listed on this page will be put into effect.</p>
 </div>
 
-<p>To monitor the list of domains classified by your Safari instance, or to test ITP in action, you can utilize the <strong>ITP Debug Mode</strong>, with instructions for use found behind <a href="https://webkit.org/blog/9521/intelligent-tracking-prevention-2-3/">this link</a>.</p>
+<p>To monitor the list of domains classified by your Safari instance, or to test ITP in action, you can utilize the <strong>ITP Debug Mode</strong>, with instructions for use found behind <a href="https://www.simoahava.com/privacy/itp-debug-mode-in-safari/">this link</a>.</p>
 <h2 id="third-party-cookies">Third-party cookies</h2>
 <p>Safari blocks <strong>all</strong> access to cookies in third-party context.</p>
 <h3 id="storage-access-api">Storage Access API</h3>
@@ -971,6 +971,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <p>Safari also protects against <strong>first-party bounce tracking</strong>. Bounce tracking happens when instead of navigating the user directly to the target domain, the user is redirected through intermediate domains which can set cookies and build a profile of the user. Intelligent Tracking Prevention detects when domains are used solely for bounce tracking and clears all website data that might have been saved on them.</p>
 <p>Similarly, Safari protects against <strong>tracker collusion</strong>, where multiple tracking domains in a redirect chain can feed information to each other to build a comprehensive profile of the user. If one domain in this chain is classified as having cross-site tracking capabilities, then all domains in the redirect chain will be classified as well.</p>
 <p>With <strong>Safari 14</strong>, WebKit&rsquo;s <a href="https://webkit.org/tracking-prevention/">tracking preventions</a> are extended to <strong>all</strong> browsers running on the iOS platform. There is no way for the browser or any app using the browser to toggle these protections off. Only the user can opt-out of cross-site tracking protections.</p>
+<p>WebKit browsers also delete <strong>all site data</strong> (script-writable storage, all cookies) if the site domain has been classified by ITP and if there has been no meaningful interaction with the site in first-party context in the last 30 days. Granted access through Storage Access API resets the timer as well.</p>
 
 
 
