--- a/brave/index.html
+++ b/brave/index.html
@@ -918,13 +918,16 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 
 <p>By blocking requests upstream, it means that if the request initiated a resource download (such as a JavaScript library), this resource is never downloaded and thus the code is not executed in the user&rsquo;s browser. If the request initiated a pixel call (such as a GET for an image), it means the pixel call will be aborted before it is received by the endpoint.</p>
 <h2 id="third-party-cookies">Third-party cookies</h2>
-<p><strong>All</strong> third-party cookies are blocked by default.</p>
+<p><strong>All</strong> third-party cookies are blocked by default in subresource requests (e.g. CDN loads, pixel pings).</p>
 <figure class="left-align">
     <img src="/images/content/brave-cookie-block.jpg"/> <figcaption>
             <h4>Brave uses &#34;cross-site&#34; interchangeably with &#34;third-party&#34; in this case</h4>
         </figcaption>
 </figure>
 
+<p>In frames (e.g. <code>&lt;iframe&gt;</code>), access is <strong>partitioned</strong> and set to <strong>site-length</strong> expiration.</p>
+<p><strong>Partitioned access</strong> means that the <code>document.cookie</code> API will work in a cross-site <code>&lt;iframe&gt;</code>, but the storage will be unique between the site embedding the frame and the frame itself. Another site embedding the same frame would have a different storage profile.</p>
+<p><strong>Site-length</strong> expiration means that as soon as the last page of the site embedding the cross-site frame is closed, the partitioned storage is cleared. This is different to how e.g. Safari works, where the storage is cleared only upon the browser being closed (this clears the storage also in Brave).</p>
 <h2 id="first-party-cookies">First-party cookies</h2>
 <p>For cookies set with JavaScript&rsquo;s <code>document.cookie</code>, expiration is set to a maximum of <strong>7 days</strong>.</p>
 
@@ -933,9 +936,9 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 
 <p>For cookies set with the <code>Set-Cookie</code> HTTP response header, expiration is set to a maximum of <strong>6 months</strong>.</p>
 <h2 id="other-third-party-storage">Other third-party storage</h2>
-<p>No restrictions.</p>
+<p><strong>Partitioned</strong> and <strong>site-length</strong> expiration for <code>localStorage</code> and <code>sessionStorage</code> APIs (see <a href="#third-party-cookies">Third-party cookies</a> for more information).</p>
 
-<div class="notices info" ><p>Note that since Brave <em>blocks</em> resources found in their <a href="#classification-of-known-trackers">classification lists</a>, it has the downstream effect of blocking storage access from these vendors who now can&rsquo;t execute their JavaScript in the user&rsquo;s browser, or respond to the blocked HTTP requests.</p>
+<div class="notices info" ><p>Note that since Brave <em>blocks</em> resources found in their <a href="#classification-of-known-trackers">classification lists</a>, it has the downstream effect of blocking storage access from these vendors who now can&rsquo;t execute their JavaScript in the user&rsquo;s browser or respond to the blocked HTTP requests.</p>
 </div>
 
 <h2 id="other-first-party-storage">Other first-party storage</h2>
