--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser&rsquo;s own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 21 January 2021<br>
-Updated Brave with less strict referrer policy (now defaults to <code>strict-origin-when-cross-origin</code> instead of removing cross-site referrer altogether)..</p>
+<p><strong>Last updated</strong>: 12 March 2021<br>
+Updated Brave with ephemeral site storage details.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -866,7 +866,7 @@ Updated Brave with less strict referrer policy (now defaults to <code>strict-ori
 </tr>
 <tr>
 <td align="right"><strong>Cookies in 3rd party context</strong></td>
-<td><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> All access restricted.</td>
+<td><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Restrict access in subresource requests.</span></p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Partitioned access in frame.</span></p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed. </span></td>
 <td><a href="/chrome/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/edge/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
 <td><a href="/firefox/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
@@ -884,7 +884,7 @@ Updated Brave with less strict referrer policy (now defaults to <code>strict-ori
 </tr>
 <tr>
 <td align="right"><strong>Other browser storage in 3rd party context</strong></td>
-<td><a href="/brave/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
+<td><p><a href="/brave/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Partitioned access in frame.</span></p><p><a href="/brave/#other-third-party-storage" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed. </span></p></td>
 <td><a href="/chrome/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><p><a href="/edge/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</p><p><a href="/edge/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions for other domains.</p></td>
 <td><p><a href="/firefox/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> <code>localStorage</code> and <code>IndexedDB</code> restricted for known trackers.</p><p><a href="/firefox/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> <code>sessionStorage</code> is not restricted.</p><p><a href="/firefox/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions for other domains.</p></td>
@@ -911,7 +911,7 @@ Updated Brave with less strict referrer policy (now defaults to <code>strict-ori
 </tr>
 <tr>
 <td align="right"><strong>Referrer</strong></td>
-<td><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Cross-site referrers are spoofed (set to the referred-to rather than the referred-from origin) in non-navigational HTTP requests.</p><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new"><code>strict-origin-when-cross-origin</code> or stricter referrer policy in cross-site navigational requests.</span></p><p><a href="/brave/#referrer" rel="footnote" class="fa fa-info-circle"></a> Same-site navigation preserves the referrer.</p></td>
+<td><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Cross-site referrers are spoofed (set to the referred-to rather than the referred-from origin) in non-navigational HTTP requests.</p><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <code>strict-origin-when-cross-origin</code> or stricter referrer policy in cross-site navigational requests.</p><p><a href="/brave/#referrer" rel="footnote" class="fa fa-info-circle"></a> Same-site navigation preserves the referrer.</p></td>
 <td><a href="/chrome/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></td>
 <td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></td>
 <td><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <code>strict-origin-when-cross-origin</code> for requests to known tracker domains, otherwise <code>no-referrer-when-downgrade</code>.</td>
