Update all browsers' User Agent handling on macOS

--- a/firefox/index.html
+++ b/firefox/index.html
@@ -943,6 +943,12 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <p>The default referrer policy is <code>strict-origin-when-cross-origin</code>.</p>
 <h2 id="other">Other</h2>
 <p>If the domain is in the Fingerprinting category of Disconnect.me <strong>and</strong> in one of the tracking categories (Advertising, Analytics, or Social), all third-party <strong>requests</strong> to the domain are blocked.</p>
+<p>On macOS Firefox, the version number in the User Agent string is frozen to <code>10.15</code> to fix compatibility issues with upgrading to macOS version 11+ (Big Sur). This has obvious privacy implications as well, as the platform version is no longer useful for fingerprinting purposes.</p>
+<p>
+<div class="notices info" ><p>Sample User Agent string when running Firefox 88.0.1 on macOS 11.3.1:<br/>
+<code>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:88.0) Gecko/20100101 Firefox/88.0&quot;</code></p>
+</div>
+´</p>
 
 
 
