--- a/brave/index.html
+++ b/brave/index.html
@@ -981,6 +981,12 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </div>
 
 <p>Brave has lots of initiatives for <a href="https://brave.com/brave-fingerprinting-and-privacy-budgets/">neutralizing fingerprinting surfaces</a>, with features such as <a href="https://github.com/brave/brave-browser/issues/5614">randomized HTML canvas fingerprints</a> preferred over just removing or clearing the fingerprint surfaces.</p>
+<p>On macOS Brave, the version number in the User Agent string is frozen to <code>10_15_7</code> to fix compatibility issues with upgrading to macOS version 11+ (Big Sur). This has obvious privacy implications as well, as the platform version is no longer useful for fingerprinting purposes.</p>
+<p>
+<div class="notices info" ><p>Sample User Agent string when running Brave 1.24.85 on macOS 11.3.1:<br/>
+<code>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36&quot;</code></p>
+</div>
+´</p>
 
 
 
