--- a/chrome/index.html
+++ b/chrome/index.html
@@ -827,6 +827,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
     <li><a href="#other-first-party-storage">Other first-party storage</a></li>
     <li><a href="#cname-cloaking">CNAME cloaking</a></li>
     <li><a href="#referrer">Referrer</a></li>
+    <li><a href="#other">Other</a></li>
   </ul>
 </nav>
     </div>
@@ -881,6 +882,13 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <p>No protections against CNAME cloaking.</p>
 <h2 id="referrer">Referrer</h2>
 <p>Chrome 85 sets the default referrer policy to <code>strict-origin-when-cross-origin</code>. This means that for cross-origin requests (e.g. <code>sub.domain.com</code> to <code>othersub.domain.com</code>, or <code>sub.domain.com</code> to <code>sub.otherdomain.com</code>) the <code>referer</code> HTTP header and <code>document.referrer</code> JavaScript API are truncated to show just the <strong>origin</strong> of the website making the request. Thus a page such as <code>https://www.domain.com/some-page?param=value</code> would show up just as <code>https://www.domain.com</code> in the referrer records.</p>
+<h2 id="other">Other</h2>
+<p>On macOS Chrome, the version number in the User Agent string is frozen to <code>10_15_7</code> to fix compatibility issues with upgrading to macOS version 11+ (Big Sur). This has obvious privacy implications as well, as the platform version is no longer useful for fingerprinting purposes.</p>
+
+<div class="notices info" ><p>Sample User Agent string when running Chrome 90.0.4430.212 on macOS 11.3.1:<br/>
+<code>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36&quot;</code></p>
+</div>
+
 
 
 
