--- a/edge/index.html
+++ b/edge/index.html
@@ -833,6 +833,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
     <li><a href="#other-first-party-storage">Other first-party storage</a></li>
     <li><a href="#cname-cloaking">CNAME cloaking</a></li>
     <li><a href="#referrer">Referrer</a></li>
+    <li><a href="#other">Other</a></li>
   </ul>
 </nav>
     </div>
@@ -973,6 +974,13 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <p>No protections against CNAME cloaking.</p>
 <h2 id="referrer">Referrer</h2>
 <p>Default browser policy (<code>strict-origin-when-cross-origin</code>).</p>
+<h2 id="other">Other</h2>
+<p>On macOS Edge, the version number in the User Agent string is frozen to <code>10_15_7</code> to fix compatibility issues with upgrading to macOS version 11+ (Big Sur). This has obvious privacy implications as well, as the platform version is no longer useful for fingerprinting purposes.</p>
+
+<div class="notices info" ><p>Sample User Agent string when running Edge 90.0.818.62 on macOS 11.3.1:<br/>
+<code>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36 Edg/90.0.818.62&quot;</code></p>
+</div>
+
 
 
 
