--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser&rsquo;s own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 22 March 2021<br>
-Updated Firefox with new default referrer policy.</p>
+<p><strong>Last updated</strong>: 17 May 2021<br>
+Added details about Mac OS X version number freeze in all browsers&rsquo; handling of User Agent strings.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -866,7 +866,7 @@ Updated Firefox with new default referrer policy.</p>
 </tr>
 <tr>
 <td align="right"><strong>Cookies in 3rd party context</strong></td>
-<td><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Restrict access in subresource requests.</span></p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Partitioned access in frame.</span></p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed. </span></td>
+<td><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Restrict access in subresource requests.</p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Partitioned access in frame.</p><p><a href="/brave/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed.</td>
 <td><a href="/chrome/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/edge/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
 <td><a href="/firefox/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
@@ -884,7 +884,7 @@ Updated Firefox with new default referrer policy.</p>
 </tr>
 <tr>
 <td align="right"><strong>Other browser storage in 3rd party context</strong></td>
-<td><p><a href="/brave/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Partitioned access in frame.</span></p><p><a href="/brave/#other-third-party-storage" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed. </span></p></td>
+<td><p><a href="/brave/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> Partitioned access in frame.</p><p><a href="/brave/#other-third-party-storage" rel="footnote" class="fa fa-info-circle"></a> Partitioned storage is cleared when no more first-party documents that use the partition are open, or when the browser is closed.</p></td>
 <td><a href="/chrome/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><p><a href="/edge/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</p><p><a href="/edge/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions for other domains.</p></td>
 <td><p><a href="/firefox/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> <code>localStorage</code> and <code>IndexedDB</code> restricted for known trackers.</p><p><a href="/firefox/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> <code>sessionStorage</code> is not restricted.</p><p><a href="/firefox/#other-third-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions for other domains.</p></td>
@@ -912,19 +912,19 @@ Updated Firefox with new default referrer policy.</p>
 <tr>
 <td align="right"><strong>Referrer</strong></td>
 <td><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Cross-site referrers are spoofed (set to the referred-to rather than the referred-from origin) in non-navigational HTTP requests.</p><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <code>strict-origin-when-cross-origin</code> or stricter referrer policy in cross-site navigational requests.</p><p><a href="/brave/#referrer" rel="footnote" class="fa fa-info-circle"></a> Same-site navigation preserves the referrer.</p></td>
-<td><a href="/chrome/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></td>
-<td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></td>
-<td><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></td>
+<td><a href="/chrome/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</td>
+<td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</td>
+<td><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>strict-origin-when-cross-origin</code>)</td>
 <td><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Downgrade cross-site <code>document.referrer</code> to origin.</p><p><a href="/safari/#referrer" rel="footnote" class="fa fa-info-circle"></a> Downgrade all cross-site request headers to origin.</p><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> For referrers that are known trackers, where the referring page also has URL decoration (query parameters or fragments), <code>document.referrer</code> is downgraded to eTLD+1.</p></td>
 <td><a href="/cliqz/#referrer" rel="footnote" class="fa fa-info-circle"></a> Strip all cross-origin referrers to origin.</td>
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
-<td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>, and others) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Randomize HTML canvas fingerprints by first-party domain.</p></td>
-<td>n/a</td>
-<td>n/a</td>
-<td><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</td>
-<td><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> Detect delays in bounce trackers and treat them as regular bounces.</p><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> Extend WebKit&rsquo;s tracking protections to all browsers running on iOS 14 and newer. These protections can only be disabled by the user.</p><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Purge all site data from classified domains if no user interaction (or Storage Access API grant) in first-party context has been recorded in the last 30 days.</span></p></td>
+<td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Remove known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>, and others) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Randomize HTML canvas fingerprints by first-party domain.</p><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Freeze Mac OS X version to 10_15_7 in the User Agent string.</span></p></td>
+<td><p><a href="/chrome/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Freeze Mac OS X version to 10_15_7 in the User Agent string.</span></p></td>
+<td><p><a href="/edge/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Freeze Mac OS X version to 10_15_7 in the User Agent string.</span></p></td>
+<td><p><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</p><p><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Freeze Mac OS X version to 10_15 in the User Agent string.</span></p></td>
+<td><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> Detect delays in bounce trackers and treat them as regular bounces.</p><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> Extend WebKit&rsquo;s tracking protections to all browsers running on iOS 14 and newer. These protections can only be disabled by the user.</p><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> Purge all site data from classified domains if no user interaction (or Storage Access API grant) in first-party context has been recorded in the last 30 days.</p><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Freeze Mac OS X version to 10_15_7 in the User Agent string.</span></p></td>
 <td><p><a href="/cliqz/#other" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</p> <p><a href="/cliqz/" rel="footnote" class="fa fa-info-circle"></a> <span class="new">The Cliqz project has been <a href="https://cliqz.com/announcement.html">shut down</a>.</span></p></td>
 </tr>
 </tbody>
